--- a/about.html
+++ b/about.html
@@ -233,7 +233,7 @@ body {
                 <div class="row">
                     <div class="col-xl-6">
                         <!-- Left Section -->
-                        <img class="w-100 py-xl-5 text-right" src="./img/about-us.png" alt="Programmer Coding" />
+                        <img class="w-100 py-xl-5 text-right" src="./img/2.png" alt="Programmer Coding" />
                     </div>
                     <div class="col-xl-6">
                         <!-- Right Section -->
