--- a/books.html
+++ b/books.html
@@ -95,7 +95,7 @@
                         <div class="p-4 text-center">
                             <a href="./img/c.pdf" download>
                                 <img class="w-100" src="https://img.icons8.com/?size=512&id=shQTXiDQiQVR&format=png" />
-                                <h5>C-Handwritten</h5>
+                                <h5>C-Language</h5>
                             </a>
                         </div>
                     </div>
