--- a/books.html
+++ b/books.html
@@ -103,7 +103,7 @@
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2 py-3">
                     <div class="card h-100">
                         <div class="p-4 text-center">
-                            <a href="./img/sqlbook.pdf" download>
+                            <a href="./img/sql.pdf" download>
                                 <img class="w-100" src="https://img.icons8.com/?size=512&id=uHZV38hOzCFA&format=png" />
                                 <h5>SQL-Handwritten</h5>
                             </a>
@@ -146,6 +146,46 @@
                             <a href="./img/javascript.pdf" download>
                                 <img class="w-100" src="https://img.icons8.com/?size=512&id=gYCTehfTlYk5&format=png" />
                                 <h5>Javascript</h5>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2 py-3">
+                    <div class="card h-100">
+                        <div class="p-4 text-center">
+                            <a href="./img/java.pdf" download>
+                                <img class="w-100" src="https://img.icons8.com/?size=512&id=Pd2x9GWu9ovX&format=png" />
+                                <h5>Java</h5>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2 py-3">
+                    <div class="card h-100">
+                        <div class="p-4 text-center">
+                            <a href="./img/css.pdf" download>
+                                <img class="w-100" src="https://img.icons8.com/?size=512&id=8g8wgS42uN5W&format=png" />
+                                <h5>CSS</h5>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2 py-3">
+                    <div class="card h-100">
+                        <div class="p-4 text-center">
+                            <a href="./img/htmlcheatsheet.pdf" download>
+                                <img class="w-100" src="https://img.icons8.com/?size=512&id=PJPUPm5p7gu1&format=png" />
+                                <h5>HTML-cheat-sheet</h5>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2 py-3">
+                    <div class="card h-100">
+                        <div class="p-4 text-center">
+                            <a href="./img/sqlbook.pdf" download>
+                                <img class="w-100" src="https://img.icons8.com/?size=512&id=hKw7Mn8TNTuz&format=png" />
+                                <h5>SQL-SmallNotes</h5>
                             </a>
                         </div>
                     </div>
