--- a/books.html
+++ b/books.html
@@ -105,7 +105,7 @@
                         <div class="p-4 text-center">
                             <a href="./img/sql.pdf" download>
                                 <img class="w-100" src="https://img.icons8.com/?size=512&id=uHZV38hOzCFA&format=png" />
-                                <h5>SQL-Handwritten</h5>
+                                <h5>SQL</h5>
                             </a>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                         <div class="p-4 text-center">
                             <a href="./img/html.pdf" download>
                                 <img class="w-100" src="https://img.icons8.com/?size=512&id=XcT7s8bxMnBL&format=png" />
-                                <h5>HTML-Handwritten</h5>
+                                <h5>HTML</h5>
                             </a>
                         </div>
                     </div>
