--- a/it.html
+++ b/it.html
@@ -16,6 +16,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.1.0/mdb.min.css" rel="stylesheet" />
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.1.0/mdb.min.js"></script>
+    <!-- Animate Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -29,31 +31,6 @@
         .card:hover {
             box-shadow: 5px 6px 6px 2px #e9ecef;
             transform: scale(1.1);
-        }
-
-        .image-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 30px;
-            margin-bottom: -30px;
-        }
-
-        .image-container img {
-            max-width: 70%;
-        }
-
-        .next-button {
-            display: flex;
-            justify-content: center;
-            margin-top: 30px;
-        }
-
-        .next-button a {
-            padding: 10px 20px;
-            background-color: #4caf50;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
         }
     </style>
 </head>
@@ -92,7 +69,7 @@
                         </b>
                         <!-- Sub-navigation items -->
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="it.html">IT</a></li>
+                            <li><a class="dropdown-item" href="programming.html">IT</a></li>
                             <li><a class="dropdown-item" href="books.html">Programming</a></li>
                         </ul>
                     </li>
@@ -106,33 +83,55 @@
         </div>
         <!-- Container wrapper -->
     </nav>
+    <div class="container h-10">
+        <!-- Content -->
+        <div class="section">
+            <div class="text-center fs-2 fw-bold">
+                Books
+            </div>
+            <div class="row">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2 py-3">
+                    <div class="card h-100">
+                        <div class="p-4 text-center">
+                            <a href="./img/c.pdf" download>
+                                <img class="w-100" src="https://img.icons8.com/?size=512&id=shQTXiDQiQVR&format=png" />
+                                <h5>C-Handwritten</h5>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2 py-3">
+                    <div class="card h-100">
+                        <div class="p-4 text-center">
+                            <a href="./img/sqlbook.pdf" download>
+                                <img class="w-100" src="https://img.icons8.com/?size=512&id=uHZV38hOzCFA&format=png" />
+                                <h5>SQL-Handwritten</h5>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+               
+				
+            </div>
+        </div>
+    </div>
 
-    <div class="image-container">
-        <img src="./img/programming1.png" style="max-width: 70%;" alt="Programming Image">
-    </div>
-    <div class="image-container">
-        <img src="./img/programming2.png" style="max-width: 70%;" alt="Programming Image">
-    </div>
-    <div class="image-container">
-        <img src="./img/programming3.png" style="max-width: 70%;" alt="Programming Image">
-    </div>
+    <!-- Custom JavaScript -->
+    <script>
+        const learnDropdown = document.getElementById('learnDropdown');
+        const subMenu = learnDropdown.querySelector('.dropdown-menu');
 
-    <div class="next-button">
-        <a href="programming2.html">Next</a>
-    </div>
+        learnDropdown.addEventListener('mouseover', () => {
+            subMenu.classList.add('show');
+        });
 
+        learnDropdown.addEventListener('mouseout', () => {
+            subMenu.classList.remove('show');
+        });
+    </script>
+
+    <!-- MDB Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.1.0/mdb.min.js"></script>
 </body>
-<script>
-    const learnDropdown = document.getElementById('learnDropdown');
-    const subMenu = learnDropdown.querySelector('.dropdown-menu');
-
-    learnDropdown.addEventListener('mouseover', () => {
-        subMenu.classList.add('show');
-    });
-
-    learnDropdown.addEventListener('mouseout', () => {
-        subMenu.classList.remove('show');
-    });
-</script>
 
 </html>
