--- a/about.html
+++ b/about.html
@@ -208,12 +208,12 @@ body {
 					 <li class="nav-item dropdown p-4" id="learnDropdown">
                         <b>
                             <a class="text-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">Learn</a>
+                                aria-expanded="false">Books</a>
                         </b>
                         <!-- Sub-navigation items -->
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="programming.html">Programming</a></li>
-                            <li><a class="dropdown-item" href="books.html">Books</a></li>
+                            <li><a class="dropdown-item" href="it.html">IT</a></li>
+                            <li><a class="dropdown-item" href="books.html">Programming</a></li>
                         </ul>
                     </li>
                     <li class="nav-item p-4"><b>
