--- a/it.html
+++ b/it.html
@@ -93,7 +93,7 @@
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2 py-3">
                     <div class="card h-100">
                         <div class="p-4 text-center">
-                            <a href="./it/linuxcommands.pdf" download>
+                            <a href="./it/linuxommands.pdf" download>
                                 <img class="w-100" src="https://img.icons8.com/?size=512&id=17842&format=png" />
                                 <h5>Linux Commands</h5>
                             </a>
