--- a/it.html
+++ b/it.html
@@ -100,6 +100,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-6 col-sm-4 col-md-3 col-lg-2 py-3">
+                    <div class="card h-100">
+                        <div class="p-4 text-center">
+                            <a href="./it/basicnetwork.pdf" download>
+                                <img class="w-100" src="https://img.icons8.com/?size=512&id=wlGEvoGh3wgi&format=png" />
+                                <h5>Basic Networking</h5>
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 
 				
             </div>
