--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <div style="width: max-content;">
                                 <div class="fs-4 fw-bold typewriter">
                                     > <span>A Student...!</span><br>
-									 > <span>Undergraduate-CYBERSECURITY.</span>
+									 > <span>CYBERSECURITY.</span>
                                 </div>
                             </div>
                         </div>
