--- a/about.html
+++ b/about.html
@@ -289,7 +289,7 @@ body {
                             <div class="card">
                                 <div class="card-body p-4">
                                     <h3>2023-</h3>
-                                    <p class="mb-0">Chrome</p>
+                                    <p class="mb-0">Keshav Memorial Institute Of Technology</p>
                                 </div>
                             </div>
                         </div>
